--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,5 @@
-[Mongo]
-host = dc1.mongo.dootech.cn
-dbname = log_database
-username = dc1_user
-password = XOdbjWZDsfUx
-port = 27997
+[EASProxy]
+listen = 0.0.0.0
+listen_port = 9516
+server_host = fin.ls.fincdn.com
+server_port = 9503
