--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,22 @@
-before_script:
-  - apt-get update
+stages:
+  - test
+  - build
+  - deploy
 
-rspec:
-  script:
-    - bundle exec rspec
+test:
+  stage: test
+  script: echo "Running tests"
 
-rubocop:
+build:
+  stage: build
+  script: echo "Building the app"
+
+deploy_staging:
+  stage: deploy
   script:
-    - bundle exec rubocop
+    - echo "Deploy to staging server"
+  environment:
+    name: staging
+    url: https://staging.example.com
+  only:
+  - master
