--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,5 @@
 [EASProxy]
 listen = 0.0.0.0
-listen_port = 9517
-server_host = fin.ds.fincdn.com
-server_port = 9501
+listen_port = 9516
+server_host = fin.ls.fincdn.com
+server_port = 9503
