--- a/config/config.ini
+++ b/config/config.ini
@@ -3,3 +3,10 @@ listen = 0.0.0.0
 listen_port = 9516
 server_host = fin.ls.fincdn.com
 server_port = 9503
+
+[RabbitMQ]
+host = rabbitmq.hk.dootech.cn
+port = 5673
+user = dootech
+pass = q45vxgCmkK7w
+vhost = /
